<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/txtDesc"
        android:layout_width="357dp"
        android:layout_height="112dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorWhiteTransparent"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/btnCambiante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/txtDescB"
        android:layout_width="356dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:background="@color/colorWhiteTransparent"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <EditText
        android:id="@+id/txtCodProv"
        android:layout_width="122dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhiteTransparent"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodBar" />

    <EditText
        android:id="@+id/txtCodBar"
        android:layout_width="122dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorWhiteTransparent"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="122dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhiteTransparent"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCod" />

    <EditText
        android:id="@+id/txtCod"
        android:layout_width="122dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorWhiteTransparent"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/txtPreC"
        android:layout_width="93dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorWhiteTransparent"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/txtPreV"
        android:layout_width="93dp"
        android:layout_height="21dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorWhiteTransparent"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@+id/txtPreC"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="111dp"
        android:layout_height="21dp"
        android:layout_marginBottom="19dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="13dp"
        android:background="@color/colorWhiteTransparent"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/txtSubCa"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="117dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:text="@string/sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPreC" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="117dp"
        android:layout_height="118dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="NuevaFoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/codBar"
        app:layout_constraintEnd_toStartOf="@+id/txtCodBar"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/nombre"
        app:layout_constraintEnd_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/cod"
        app:layout_constraintEnd_toStartOf="@+id/txtCod"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/codProv"
        app:layout_constraintEnd_toStartOf="@+id/txtCodProv"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="72dp"
        android:text="@string/preVen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="119dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:text="@string/preCom"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="51dp"
        android:text="@string/cant"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnMenos"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/ic_menos"
        android:onClick="restar"
        app:layout_constraintBottom_toTopOf="@+id/txtDescB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCantidad"
        app:layout_constraintTop_toBottomOf="@+id/btnMas" />

    <Button
        android:id="@+id/btnMas"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/ic_mas"
        android:onClick="sumar"
        app:layout_constraintBottom_toTopOf="@+id/btnMenos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtCantidad"
        app:layout_constraintTop_toBottomOf="@+id/txtCodProv" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="168dp"
        android:layout_marginBottom="7dp"
        android:text="@string/descB"
        app:layout_constraintBottom_toTopOf="@+id/txtDescB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="78dp"
        android:layout_height="23dp"
        android:text="@string/desc"
        app:layout_constraintBottom_toTopOf="@+id/txtDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescB" />

    <EditText
        android:id="@+id/txtSubCa"
        android:layout_width="93dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorWhiteTransparent"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/txtCantidad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/btnCambiante"
        android:layout_width="163dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnVideo"
        android:layout_width="163dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/foto"
        android:onClick="NuevoVideo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCambiante"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>